@@ -1,3 +1,7 @@
+2007-07-17  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/Conversation.cs: added video stop message
+
 2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/ChatWindow.cs: updated the window size
